--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,13 @@
 <html>
     <head>
         <title>Super Notepad</title>
+        <script src="https://d3js.org/d3.v5.min.js"></script>
     </head>
     <body>
         <h1>Welcome to {{ name }}'s notepad</h1>
+        <ul id='tasks'>
 
+        </ul>
+        <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     </body>
-</html>
+</html> 
